# swift-homomorphic-encryption-rust

./: .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  copyright-header.txt  rust-toolchain.toml
.github/workflows/: workspace.yml
benches/: cuckoo_table.rs
src/: cuckoo_table.rs  hash_bucket.rs  lib.rs  scalar.rs  test_utilities.rs
src/homomorphic_encryption/: array_2d.rs  ciphertext.rs  context.rs  double_width_uint.rs  encryption_parameters.rs  he_scheme.rs  keys.rs  mod.rs  modulus.rs  plaintext.rs  scalar.rs  serialized_plaintext.rs
src/homomorphic_encryption/bfv/: bfv.rs  mod.rs
src/homomorphic_encryption/poly_rq/: galois.rs  mod.rs  ntt.rs  poly.rs  poly_collection.rs  poly_context.rs  poly_rq.rs
src/private_information_retrieval/: cuckoo_table.rs  error.rs  hash_bucket.rs  index_pir_protocol.rs  keyword_database.rs  keyword_pir_protocol.rs  mod.rs  mul_pir.rs  pir_test_utils.rs
tests/: integration_test.rs
