[package]
name = "flowscripter_template_rust_library"
version ="1.1.7"
edition = "2021"
description = "Project template for a Rust library."
homepage = "https://github.com/flowscripter"
license = "MIT"
repository = "https://github.com/flowscripter/template-rust-library"
exclude = [".github/"]

[lib]
crate-type = ["lib"]
