[package]
name       ="swift_homomorphic_encryption_rust"
version    ="1.0.0-alpha.3"
edition    ="2021"
description="Project template for a Rust library."
homepage   ="https://github.com/flowscripter"
license    ="MIT"
repository ="https://github.com/flowscripter/template-rust-library"
exclude    =[".github/"]

[lib]
crate-type=["lib"]

[dependencies]
eyre     ="0.6.12"
rand     ="0.8.5"
sha2     ="0.10.8"
thiserror="1.0.63"
