[package]
name       ="swift_homomorphic_encryption_rust"
version    ="1.0.0-alpha.3"
edition    ="2021"
description="A Rust rewrite of the Swift Homomorphic Encryption library"
homepage   ="https://github.com/piotr-roslaniec/swift-homomorphic-encryption-rust"
license    ="Apache-2.0"
repository ="https://github.com/flowscripter/template-rust-library"
exclude    =[".github/"]

[lib]
crate-type=["lib"]

[dependencies]
eyre        ="0.6.12"
rand        ="0.8.5"
rand_core   ="0.6.4"
sha2        ="0.10.8"
thiserror   ="2.0.3"
serde       ={ version="1.0.205", features=["derive"] }
serde_derive="1.0.205"
serde_json  ="1.0.122"

[dev-dependencies]
criterion="0.5.1"

[[bench]]
name   ="cuckoo_table"
harness=false
